Fix menu and searchbar on tablet

--- a/themes/classic/_dev/css/components/header.scss
+++ b/themes/classic/_dev/css/components/header.scss
@@ -165,6 +165,11 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      @include media-breakpoint-down(md) {
+        flex-direction: column;
+        align-items: flex-end;
+      }
     }
 
     .position-static {
