--- a/themes/classic/_dev/css/components/mainmenu.scss
+++ b/themes/classic/_dev/css/components/mainmenu.scss
@@ -1,5 +1,10 @@
 .menu {
   margin-bottom: 0;
+
+  @include media-breakpoint-down(md) {
+    align-self: flex-start;
+    margin-bottom: 1rem;
+  }
 }
 
 .top-menu {
