--- a/themes/classic/_dev/css/components/search-widget.scss
+++ b/themes/classic/_dev/css/components/search-widget.scss
@@ -16,10 +16,6 @@
   }
 
   .search-widgets {
-    @include media-breakpoint-down(md) {
-      width: 100%;
-    }
-
     form {
       input[type="text"] {
         width: 100%;
